# colorlib-gen

./: .gitignore  .travis.yml  MANIFEST.in  README.md  requirements.txt  setup.py
color_gen/: char_group.py  color_gen.py  defs.py
color_gen/templates/: python.py  sourcepawn.inc
colorlib_gen/: __main__.py  char_group.py  defs.py
colorlib_gen/templates/: cpp.hpp  python.py  sourcepawn.inc
defs/: python.yaml  sourcepawn.yaml
scripts/: install-catch2.sh
tests/: CMakeLists.txt  defs_test.py  test.cpp
